# HNSW.swift

./: CLAUDE.md  Cargo.toml  Package.swift  README.md  build-ios.sh  gh-release.sh
Sources/HnswFFI/: hnsw.swift
Sources/HnswSwift/: HnswSwift.swift
Tests/HnswSwiftTests/: HnswSwiftTests.swift
src/: lib.rs
