[package]
  name = "hnsw-swift"
  version = "0.2.0"
  edition = "2024"

[dependencies]
  hnsw_rs = "0.3.3"
  serde = { version = "1.0", features = ["derive"] }
  thiserror = "2.0"
  uniffi = { version = "0.30.0", features = ["cli"] }

[build-dependencies]
  uniffi = { version = "0.30.0", features = ["build"] }

[lib]
  crate-type = ["cdylib", "staticlib"]
  name = "hnsw"

[[bin]]
  name = "uniffi-bindgen"
  path = "src/uniffi-bindgen.rs"
